<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/gradient_village"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:src="@drawable/app_logo"
        android:adjustViewBounds="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_name"/>
    <TextView
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_title"
        android:layout_below="@+id/ivLogo"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/white"
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_subtitle"
        android:layout_below="@+id/tvAppName"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
